tentative plan for non-premixed flames

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -118,6 +118,7 @@ p
 		 <li> Final exam: 45%</li>
 		 <li> Demonstration reports: 20%. Groups of 2 or 3.</li>
 		 <li> Lecture notes: 5% <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=M7omgwNiUEnrgG3" target="_blank">February Schedule</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=8YtY5rA5G4JVuxz" target="_blank">LaTeX Template</a></li>
+		 <li> <font color="lightgreen">About a third of the mid-sem and final exams will be in line with the tutorial sets</font>
 	</ul>
 </tr>
 </table><br>
@@ -224,17 +225,16 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<td> February 7th</td></tr>
 	<tr> <td> <font color="khaki">Premixed flames</font> </td>
 	<td> February 14th</td></tr>
+	<tr> <td> <font color="greenyellow">Non-Premixed flames: Jet diffusion flame, Tsuji burner</font></td>
+	<td> February 21st</td></tr>
 </table>
+
 
 <button class="collapsible"><h4>View more events</h4></button>
 <div class="content">
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">		
-	
-	<tr> <td> <font color="greenyellow">Non-Premixed flames: Opposed flow burner (in-class video), Tsuji burner</font></td>
-	<td> February 21st</td></tr>
-
 	<tr> <td> <font color="khaki">Non-Premixed flames</font> </td>
 	<td> February 28th</td></tr>
 	
@@ -319,14 +319,18 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<tr> <td> Flamelet equations and concept of scalar dissipation rate  </td>
 	<td> TP $3.2</td></tr>
 	
-	<tr> <td> Flame structure for irreversible infinitely fast chemistry </td>
+	<tr> <td> Case Study: Burke Schumann flame<br>
+		Flame structure for irreversible infinitely fast chemistry </td>
 	<td> TP $3.3</td></tr>
 
-	<tr> <td> Steady strained 1D flame with infinitely fast chemistry and constant density: <br> Flamelet solution, relation of scalar dissipation rate to strain rate   </td>
+	<tr> <td> Case study: Steady strained 1D flame <br> Infinitely fast chemistry and constant density: Flamelet solution, relation of scalar dissipation rate to strain rate   </td>
 	<td> TP $3.4.2</td></tr> 
 	
-	<tr> <td>  Jet flame in an uniform flow field   </td>
-	<td> TP $3.4.4, HSM $10.1</td></tr> 	
+	<tr> <td> Ignition, extinction, and S-curve </td>
+	<td> <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=3BU56N8W5mBRm4O" target="_blank">Extinction Demo</a>
+
+<!--	<tr> <td>  Jet flame in an uniform flow field   </td>
+	<td> TP $3.4.4, HSM $10.1</td></tr> -->
 		
 	<tr> <td> Turbulent non-premixed flames  </td>
 	<td> CKL $11.4 </td></tr>
