tentative plan for non-premixed flames

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -319,17 +319,17 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<tr> <td> Flamelet equations and concept of scalar dissipation rate  </td>
 	<td> TP $3.2</td></tr>
 	
-	<tr> <td> Case Study: Burke Schumann flame<br>
-		Flame structure for irreversible infinitely fast chemistry </td>
+	<tr> <td> Flame Structure problem: Burke Schumann flame<br>
+		Flame structure with fast chemistry assumption</td>
 	<td> TP $3.3</td></tr>
 
-	<tr> <td> Case study: Steady strained 1D flame <br> Infinitely fast chemistry and constant density: Flamelet solution, relation of scalar dissipation rate to strain rate   </td>
+	<tr> <td> Mixing problem: Steady strained 1D flame <br> Fast chemistry assumption: Flamelet solution, relation of scalar dissipation rate to strain rate   </td>
 	<td> TP $3.4.2</td></tr> 
 	
 	<tr> <td> Ignition, extinction, and S-curve </td>
 	<td> <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=3BU56N8W5mBRm4O" target="_blank">Extinction Demo</a>
 
-<!--	<tr> <td>  Jet flame in an uniform flow field   </td>
+<!--	<tr> <td>  Jet flame in an uniform flow field   </td> Tutorial2?
 	<td> TP $3.4.4, HSM $10.1</td></tr> -->
 		
 	<tr> <td> Turbulent non-premixed flames  </td>
