tentative plan for non-premixed flames

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -314,16 +314,17 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<td> TP $3.1, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=a2HkO4BTIpNTTF1" target="_blank">Gov Eqns: Opposed flow flame</a></td> </tr>
 	
 	<tr> <td> Opp-diff flame structure at different strain rates using FlameMaster </td>
-	<td> Solution Procedure: <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=XGdIH17Wjb40SVY" target="_blank">OPPDIFF</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=wcaWrGSv2wJwNsG" target="_blank">Potential flow</a> (from FlameMaster manual)</td></tr>
+	<td> Solution Procedure: <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=XGdIH17Wjb40SVY" target="_blank">OPPDIFF</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=wcaWrGSv2wJwNsG" target="_blank">Potential flow configuration</a> (from FlameMaster manual)</td></tr>
 	
 	<tr> <td> Flamelet equations and concept of scalar dissipation rate  </td>
 	<td> TP $3.2</td></tr>
 	
-	<tr> <td> Flame Structure problem: Burke Schumann flame<br>
-		Flame structure with fast chemistry assumption</td>
+	<tr> <td> Flame structure problem: Burke Schumann flame with fast chemistry assumption<br>
+		<p style="padding-left: 205px;">Flame location, flame temperature</p></td>
 	<td> TP $3.3</td></tr>
 
-	<tr> <td> Mixing problem: Steady strained 1D flame <br> Fast chemistry assumption: Flamelet solution, relation of scalar dissipation rate to strain rate   </td>
+	<tr> <td> Mixing problem: Steady strained 1D flame with fast chemistry assumption<br> 
+		<p style="padding-left: 138px;">Flamelet solution, relation of scalar dissipation rate to strain rate</p>  </td>
 	<td> TP $3.4.2</td></tr> 
 	
 	<tr> <td> Ignition, extinction, and S-curve </td>
