tentative plan for non-premixed flames

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -221,7 +221,7 @@ Upcoming tutorial session: Premixed flames -- February 14th
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">		
-	<tr> <td> <font color="greenyellow">Premixed flames: Jet flame <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=2ZU0AJXXICyb2g7" target="_blank">Questionnaire</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=BaqqHxcjNhr8wvb" target="_blank">Images</a>. Due by February 21st </font></td>
+	<tr> <td> <font color="greenyellow">Premixed flames: Jet flame <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=2ZU0AJXXICyb2g7" target="_blank">Questionnaire</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=BaqqHxcjNhr8wvb" target="_blank">Images</a>. Due by February 21st </font></td> 
 	<td> February 7th</td></tr>
 	<tr> <td> <font color="khaki">Premixed flames</font> </td>
 	<td> February 14th</td></tr>
@@ -328,7 +328,7 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<td> TP $3.4.2</td></tr> 
 	
 	<tr> <td> Ignition, extinction, and S-curve </td>
-	<td> <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=3BU56N8W5mBRm4O" target="_blank">Extinction Demo</a>
+	<td> <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=XywzblFfE6ngdvv" target="_blank">Extinction Demo</a>
 
 <!--	<tr> <td>  Jet flame in an uniform flow field   </td> Tutorial2?
 	<td> TP $3.4.4, HSM $10.1</td></tr> -->
