--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -314,7 +314,7 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<td> TP $3.1, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=a2HkO4BTIpNTTF1" target="_blank">Gov Eqns: Opposed flow flame</a></td> </tr>
 	
 	<tr> <td> Opp-diff flame structure at different strain rates using FlameMaster </td>
-	<td> Solution Procedure: <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=XGdIH17Wjb40SVY" target="_blank">OPPDIFF</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=wcaWrGSv2wJwNsG" target="_blank">Potential flow configuration</a> (from FlameMaster manual)</td></tr>
+	<td> Solution Procedure: <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=R9RWIgLWz9zARjg" target="_blank">OPPDIFF</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=LVKf7HZlfhc5w59" target="_blank">Potential flow configuration</a> (from FlameMaster manual)</td></tr>
 	
 	<tr> <td> Flamelet equations and concept of scalar dissipation rate  </td>
 	<td> TP $3.2</td></tr>
