links for non-premixed flames

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -284,7 +284,7 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<td> General derivation: CKL $5.1/TP $2.3, <br> Low Mach number assumption: CKL $5.2.4.3 </td></tr>
 	
 	<tr> <td> Flame speed calculations using FlameMaster </td>
-	<td> <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=ju2N6Pgpfy2VyLv" target="_blank">PREMIX documentation</a> </td></tr>
+	<td> <a href="https://www.researchgate.net/profile/Ellen_Meeks/publication/260388319_PREMIX_a_fortran_program_for_modeling_steady_laminar_one-dimensional_premixed_flames/links/53fe0de20cf23bb019bd249d/PREMIX-a-fortran-program-for-modeling-steady-laminar-one-dimensional-premixed-flames.pdf" target="_blank">PREMIX documentation</a> </td></tr>
 	
 	<tr> <td> Quenching and ignition energy  </td>
 	<td> HSM $7.1, $7.2, $8.0</td></tr>
@@ -311,10 +311,10 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<col width = "35%">	
    <tr> 
 	<td> Candle flame, counterflow non-premixed flame </td>
-	<td> TP $3.1, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=a2HkO4BTIpNTTF1" target="_blank">Gov Eqns: Opposed flow flame</a></td> </tr>
+	<td> TP $3.1, <a href="https://www.sciencedirect.com/science/article/pii/S0082078489801584" target="_blank">Gov Eqns: Opposed flow flame</a></td> </tr>
 	
 	<tr> <td> Opp-diff flame structure at different strain rates using FlameMaster </td>
-	<td> Solution Procedure: <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=R9RWIgLWz9zARjg" target="_blank">OPPDIFF</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=LVKf7HZlfhc5w59" target="_blank">Potential flow configuration</a> (from FlameMaster manual)</td></tr>
+	<td> Solution Procedure: <a href="https://www.osti.gov/servlets/purl/568983" target="_blank">OPPDIFF</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=LVKf7HZlfhc5w59" target="_blank">Potential flow configuration</a> (from FlameMaster manual)</td></tr>
 	
 	<tr> <td> Flamelet equations and concept of scalar dissipation rate  </td>
 	<td> TP $3.2</td></tr>
