--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -298,7 +298,7 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<tr> <td> Turbulent premixed flames  </td>
 	<td>  Introduction: CKL $11.1, $11.2, $11.3<br>
 		Modeling: TP $5.1.3, $5.3.2, $5.3.3, $5.3.5, $5.3.6<br>
-		Relevant sections: <a href="https://owncloud.iitm.ac.in/index.php/f/03544159" target="_blank">TP $5.1</a>, <a href="https://owncloud.iitm.ac.in/index.php/f/03544160" target="_blank">TP $5.3</a>
+		Relevant sections: <a href="??" target="_blank">TP $5.1</a>, <a href="??" target="_blank">TP $5.3</a>
 	 </td></tr>
 </table><br>
 </div><br>
