tut for non-premixed flames

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -182,7 +182,8 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3>
 <ul>
-<li> 11/2: Images for exercise based on premixed flame demo are added (check demos) </li></ul>
+	<li> 19/2: Tutorial on non-premixed flames is added </li>
+	<li> 11/2: Images for exercise based on premixed flame demo are added (check demos) </li></ul>
 	<button class="collapsible"><h4>View older announcements</h4></button>
 	<div class="content">
 	<ul>
