--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -183,11 +183,13 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3>
 <ul>
+	<li> 20/2: Demo on non-premixed flames is scheduled for Thursday (21/2) at 12 PM. Assemble at the TDCE seminar hall sharp at 12 PM. </li>	---> </li>
 	<li> 19/2: Tutorial on non-premixed flames is added </li>
-	<li> 11/2: Images for exercise based on premixed flame demo are added (check demos) </li></ul>
+</ul>
 	<button class="collapsible"><h4>View older announcements</h4></button>
 	<div class="content">
 	<ul>
+	<li> 11/2: Images for exercise based on premixed flame demo are added (check demos) </li>
 	<!-- <li> 6/2: Demo on premixed flames is scheduled for Thursday (7/2) at 8 AM. Assemble at the TDCE seminar hall sharp at 8 AM. </li>	--->
 	<li> 7/2: Tutorial on premixed flames is updated.</li>
 	<li> 29/1: Schedule for scribing the lectures has been added (see Grading policy).</li>
