--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -183,7 +183,7 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3>
 <ul>
-	<li> 20/2: Demo on non-premixed flames is scheduled for Thursday (21/2) at 12 PM. Assemble at the TDCE seminar hall sharp at 12 PM. </li>	
+	<!--<li> 20/2: Demo on non-premixed flames is scheduled for Thursday (21/2) at 12 PM. Assemble at the TDCE seminar hall sharp at 12 PM. </li>	-->
 	<li> 19/2: Tutorial on non-premixed flames is added </li>
 </ul>
 	<button class="collapsible"><h4>View older announcements</h4></button>
@@ -206,8 +206,10 @@ Computing exercises:</h3>
 <ul>
 	<li> Request to download FlameMaster <a href="https://www.itv.rwth-aachen.de/index.php?id=flamemaster" target="_blank">here</a></li>
 	<li> Follow the installation instructions depending on your operating system (TAs can help you with this). Some systems available in TDCE 115 have FlameMaster pre-installed on them. Once again TAs can help you locate them. </li>
-	<li>Check out the example for 1D unstretched flame within the Run directory:
+	<li>Check out the example for 1D unstretched premixed flame within the Run directory:
 Path-to-FlameMaster/Run/FlameMan/Prem/Unstretched </li>	
+	<li>Check out the example for counterflow non-premixed flame within the Run directory:
+Path-to-FlameMaster/Run/FlameMan/Diff/Steady/, Path-to-FlameMaster/Run/FlameMan/Diff/SteadyPlugFlow/ </li>	
 </ul>
 </td> </tr>
 </table><br>
@@ -221,7 +223,9 @@ Upcoming tutorial session: Premixed flames -- February 14th
 <!-- <button class="collapsible"><h5>Schedule for <font color="greenyellow">demonstrations</font> and <font color="khaki">tutorial sessions</font></h5></button> -->
 <table border="1" cellspacing="1" cellpadding="1"  width="100%">
 <tr> <td width="100%">
-<h3>Schedule for <font color="greenyellow">demonstrations</font> and <font color="khaki">tutorial sessions</font></h3><br>
+<h3>Schedule for <font color="greenyellow">demonstrations</font> and <font color="khaki">tutorial sessions</font></h3>
+<button class="collapsible"><h4>View previous events</h4></button>
+<div class="content">
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">		
@@ -229,11 +233,16 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<td> February 7th</td></tr>
 	<tr> <td> <font color="khaki">Premixed flames</font> </td>
 	<td> February 14th</td></tr>
-	<tr> <td> <font color="greenyellow">Non-Premixed flames: Jet diffusion flame, Tsuji burner</font></td>
-	<td> February 21st</td></tr>
 </table>
-
-
+</div>
+<table border="1" cellspacing="2" cellpadding="2" width="100%">
+	<col width = "65%">
+	<col width = "35%">		
+	<tr> <td> <font color="greenyellow">Non-Premixed flames: Jet diffusion flame, Tsuji burner. <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=0vhINBX2XsSMmOO" target="_blank">Questionnaire</a>. Due by March 7th</font></td>
+	<td> February 21st</td></tr>
+	<tr> <td> <font color="khaki">Non-Premixed flames</font> </td>
+	<td> February 28th</td></tr>
+</table>
 <button class="collapsible"><h4>View more events</h4></button>
 <div class="content">
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
@@ -339,6 +348,9 @@ Upcoming tutorial session: Premixed flames -- February 14th
 		
 	<tr> <td> Turbulent non-premixed flames  </td>
 	<td> CKL $11.4 </td></tr>
+	
+	<tr> <td> Droplet combustion theory  </td>
+	<td> </td></tr>
 </table><br>
 <!-- </div><br> -->
 
