--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -184,7 +184,7 @@ Email: varuns@iitm.ac.in </li>
 Updates/Announcements:</font></h3>
 <ul>
 	<!--<li> 20/2: Demo on non-premixed flames is scheduled for Thursday (21/2) at 12 PM. Assemble at the TDCE seminar hall sharp at 12 PM. </li>	-->
-	<li> 19/2: Tutorial on non-premixed flames is added </li>
+	<li> 22/2: Tutorial on non-premixed flames is updated </li>
 </ul>
 	<button class="collapsible"><h4>View older announcements</h4></button>
 	<div class="content">
