demo 2 images uploaded

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -54,7 +54,6 @@ p
   padding:0;
 }
 </style>
-<!--
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -64,7 +63,6 @@ p
   ga('create', 'UA-62002830-1', 'auto');
   ga('send', 'pageview');
 </script>
---> 
 <style>
 .collapsible {
   background-color: gray;
@@ -238,7 +236,7 @@ Upcoming tutorial session: Premixed flames -- February 14th
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">		
-	<tr> <td> <font color="greenyellow">Non-Premixed flames: Jet diffusion flame, Tsuji burner. <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=0vhINBX2XsSMmOO" target="_blank">Questionnaire</a>. Due by March 7th</font></td>
+	<tr> <td> <font color="greenyellow">Non-Premixed flames: Jet diffusion flame, Tsuji burner. <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=0vhINBX2XsSMmOO" target="_blank">Questionnaire</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=I4Gw1G5Iww4ip3H" target="_blank">Images</a>. Due by March 7th</font></td>
 	<td> February 21st</td></tr>
 	<tr> <td> <font color="khaki">Non-Premixed flames</font> </td>
 	<td> February 28th</td></tr>
