--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -182,6 +182,7 @@ Email: varuns@iitm.ac.in </li>
 Updates/Announcements:</font></h3>
 <ul>
 	<!--<li> 20/2: Demo on non-premixed flames is scheduled for Thursday (21/2) at 12 PM. Assemble at the TDCE seminar hall sharp at 12 PM. </li>	-->
+	<li> 23/2: Images for exercise based on non-premixed flame demo are added (check demos) </li>
 	<li> 22/2: Tutorial on non-premixed flames is updated </li>
 </ul>
 	<button class="collapsible"><h4>View older announcements</h4></button>
