demo schedule changed as per vsk preference

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -247,6 +247,9 @@ Upcoming tutorial session: Premixed flames -- February 14th
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">			
+	<tr> <td> <font color="khaki">Droplet combustion (tentative)</font></td>
+	<td> March 14th</td></tr>
+	
 	<tr> <td> <font color="greenyellow">Gaseous fuel burners: LPG stove burner, MILD combustor</font></td>
 	<td> March 21st</td></tr>
 
