--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -310,7 +310,7 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<tr> <td> Turbulent premixed flames  </td>
 	<td>  Introduction: CKL $11.1, $11.2, $11.3<br>
 		Modeling: TP $5.1.3, $5.3.2, $5.3.3, $5.3.5, $5.3.6<br>
-		Relevant sections: <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=iUrc3R3phpGa9Od" target="_blank">TP $5.1</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=XHripGSowZqbqbF" target="_blank">TP $5.3</a>
+		<!-- Relevant sections: <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=iUrc3R3phpGa9Od" target="_blank">TP $5.1</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=XHripGSowZqbqbF" target="_blank">TP $5.3</a>-->
 	 </td></tr>
 </table><br>
 </div><br>
@@ -326,7 +326,7 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<td> TP $3.1, <a href="https://www.sciencedirect.com/science/article/pii/S0082078489801584" target="_blank">Gov Eqns: Opposed flow flame</a></td> </tr>
 	
 	<tr> <td> Opp-diff flame structure at different strain rates using FlameMaster </td>
-	<td> Solution Procedure: <a href="https://www.osti.gov/servlets/purl/568983" target="_blank">OPPDIFF</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=LVKf7HZlfhc5w59" target="_blank">Potential flow configuration</a> (from FlameMaster manual)</td></tr>
+	<td> Solution Procedure: <a href="https://www.osti.gov/servlets/purl/568983" target="_blank">OPPDIFF</a>, Potential flow configuration (provided with  FlameMaster manual)</td></tr>
 	
 	<tr> <td> Flamelet equations and concept of scalar dissipation rate  </td>
 	<td> TP $3.2</td></tr>
