removing copyrighted links

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -208,7 +208,9 @@ Computing exercises:</h3>
 	<li>Check out the example for 1D unstretched premixed flame within the Run directory:
 Path-to-FlameMaster/Run/FlameMan/Prem/Unstretched </li>	
 	<li>Check out the example for counterflow non-premixed flame within the Run directory:
-Path-to-FlameMaster/Run/FlameMan/Diff/Steady/, Path-to-FlameMaster/Run/FlameMan/Diff/SteadyPlugFlow/ </li>	
+Path-to-FlameMaster/Run/FlameMan/Diff/Steady/C3H8/, Path-to-FlameMaster/Run/FlameMan/Diff/SteadyPlugFlow/ </li>	
+	<li>Check out the example for generating flamelet solutions within the Run directory:
+Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	
 </ul>
 </td> </tr>
 </table><br>
