lecture summary: module 1

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -182,6 +182,7 @@ Email: varuns@iitm.ac.in </li>
 Updates/Announcements:</font></h3>
 <ul>
 	<!--<li> 20/2: Demo on non-premixed flames is scheduled for Thursday (21/2) at 12 PM. Assemble at the TDCE seminar hall sharp at 12 PM. </li>	-->
+	<li> 25/2: Summary for selected lectures in Module 1 has been uploaded (check Module 1 header) </li>
 	<li> 23/2: Images for exercise based on non-premixed flame demo are added (check demos) </li>
 	<li> 22/2: Tutorial on non-premixed flames is updated </li>
 </ul>
@@ -282,7 +283,7 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	</tr> 
 </table><br>
 
-<button class="collapsible"><h5>Module 1: Premixed flames, with bunsen burner as an example: <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=RUupt9g8MxPX20c" target="_blank">Tutorial</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=kQeLROs54Biyg0j" target="_blank">Reading Exercise</a> </h5></button>
+<button class="collapsible"><h5>Module 1: Premixed flames, with bunsen burner as an example: <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=RUupt9g8MxPX20c" target="_blank">Tutorial</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=kQeLROs54Biyg0j" target="_blank">Reading Exercise</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=KAXqhCYjjJplUyu" target="_blank">Lecture summary</a> </h5></button>
 <div class="content">
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
