--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -113,7 +113,9 @@ p
 
 <table border="1" cellspacing="1" cellpadding="1"  width="100%">
 <tr> <td width="100%"><h3> Grading policy: </h3>
-	<ul> <li> Mid-semester exam (March 1--4): 30%</li>
+	<ul> <li> Mid-semester exam: 30% <br>
+		<p style="padding-left: 50px;"> <font color="lightgreen">Date: March 5th (Tuesday), Time: 6 PM--8 PM, Venue: TDCE seminar hall</font></p>
+		<p style="padding-left: 50px;"><font color="lightgreen">Cheat sheet: One A4 size sheet (both sides) permitted</font></p></li>
 		 <li> Final exam: 45%</li>
 		 <li> Demonstration reports: 20%. Groups of 2 or 3.</li>
 		 <li> Lecture notes: 5% <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=M7omgwNiUEnrgG3" target="_blank">February Schedule</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=8YtY5rA5G4JVuxz" target="_blank">LaTeX Template</a></li>
