nrobert lecture notes

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -107,7 +107,7 @@ p
     <li> Understanding Combustion by H. S. Mukunda, Macmillan India (HSM) </li>
     <li> Combustion Physics by C. K. Law (CKL) </li>
 	<li> Theoretical and Numerical Combustion by Thierry Poinsot and Denis Veynante, 2016 (TP)</li>
-	<li> <a href="https://www.itv.rwth-aachen.de/fileadmin/Downloads/Summerschools/SummerSchool.pdf" target="_blank">Ercoftac Summer school, Norbert Perters, 1992</a></li>
+	<li> <a href="https://www.itv.rwth-aachen.de/fileadmin/Downloads/Summerschools/SummerSchool.pdf" target="_blank">Ercoftac Summer school, Norbert Perters, 1992 (NP)</a></li>
 </ul>
 </tr>
 </table>
@@ -336,7 +336,7 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<td> Solution Procedure: <a href="https://www.osti.gov/servlets/purl/568983" target="_blank">OPPDIFF</a>, Potential flow configuration (provided with  FlameMaster manual)</td></tr>
 	
 	<tr> <td> Flamelet equations and concept of scalar dissipation rate  </td>
-	<td> TP $3.2</td></tr>
+	<td> TP $3.2, NP $9.1</td></tr>
 	
 	<tr> <td> Flame structure problem: Burke Schumann flame with fast chemistry assumption<br>
 		<p style="padding-left: 205px;">Flame location, flame temperature</p></td>
@@ -347,7 +347,7 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<td> TP $3.4.2</td></tr> 
 	
 	<tr> <td> Ignition, extinction, and S-curve </td>
-	<td> <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=XywzblFfE6ngdvv" target="_blank">Extinction Demo</a>
+	<td> <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=XywzblFfE6ngdvv" target="_blank">Extinction Demo</a>, NP $9.4, NP $9.7
 
 <!--	<tr> <td>  Jet flame in an uniform flow field   </td> Tutorial2?
 	<td> TP $3.4.4, HSM $10.1</td></tr> -->
