non prem turb reading

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -353,7 +353,7 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<td> TP $3.4.4, HSM $10.1</td></tr> -->
 		
 	<tr> <td> Turbulent non-premixed flames  </td>
-	<td> CKL $11.4, $TP 6.4.5 </td></tr>
+	<td> CKL $11.4, $TP 6.4.3, $TP 6.4.5 </td></tr>
 	
 	<tr> <td> Droplet combustion theory  </td>
 	<td> </td></tr>
