lecture schedule update

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -119,7 +119,7 @@ p
 		<p style="padding-left: 50px;"><font color="lightgreen">Cheat sheet: One A4 size sheet (written on both sides) is permitted</font></p></li>
 		 <li> Final exam: 45%</li>
 		 <li> Demonstration reports: 20%. Groups of 2 or 3.</li>
-		 <li> Lecture notes: 5% <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=M7omgwNiUEnrgG3" target="_blank">February Schedule</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=8YtY5rA5G4JVuxz" target="_blank">LaTeX Template</a></li>
+		 <li> Lecture notes: 5% <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=M7omgwNiUEnrgG3" target="_blank">February/March Schedule</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=8YtY5rA5G4JVuxz" target="_blank">LaTeX Template</a></li>
 		 <li> <font color="lightgreen">About a third of the mid-sem and final exams will be in line with the tutorial sets</font>
 	</ul>
 </tr>
