adding mid sem exam

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -117,6 +117,7 @@ p
 	<ul> <li> Mid-semester exam: 30% <br>
 		<p style="padding-left: 50px;"><font color="lightgreen">Date: March 5th (Tuesday), Time: 6 PM--8 PM, Venue: TDCE seminar hall</font></p>
 		<p style="padding-left: 50px;"><font color="lightgreen">Cheat sheet: One A4 size sheet (written on both sides) is permitted</font></p></li>
+		<p style="padding-left: 50px;"><a href="https://owncloud.iitm.ac.in/public.php?service=files&t=vULgSopA7Oj6180">Exam</a></p>
 		 <li> Final exam: 45%</li>
 		 <li> Demonstration reports: 20%. Groups of 2 or 3.</li>
 		 <li> Lecture notes: 5% <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=M7omgwNiUEnrgG3" target="_blank">February/March Schedule</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=8YtY5rA5G4JVuxz" target="_blank">LaTeX Template</a></li>
@@ -184,15 +185,16 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3>
 <ul>
+	<li> 6/3: Solutions for Demo 2 are due on 7/3 before 5 PM. Turn it in to the TAs.
+</ul>
+	<button class="collapsible"><h4>View older announcements</h4></button>
+	<div class="content">
+	<ul>
     <li> 28/2: Tutorial on non-premixed flames is updated </li> 
 	<!--<li> 20/2: Demo on non-premixed flames is scheduled for Thursday (21/2) at 12 PM. Assemble at the TDCE seminar hall sharp at 12 PM. </li>	-->
 	<li> 25/2: Summary for selected lectures in Module 1 has been uploaded (check Module 1 header) </li>
 	<li> 23/2: Images for exercise based on non-premixed flame demo are added (check demos) </li>
 	<!-- <li> 22/2: Tutorial on non-premixed flames is updated </li> -->
-</ul>
-	<button class="collapsible"><h4>View older announcements</h4></button>
-	<div class="content">
-	<ul>
 	<li> 11/2: Images for exercise based on premixed flame demo are added (check demos) </li>
 	<!-- <li> 6/2: Demo on premixed flames is scheduled for Thursday (7/2) at 8 AM. Assemble at the TDCE seminar hall sharp at 8 AM. </li>	--->
 	<li> 7/2: Tutorial on premixed flames is updated.</li>
