--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -358,7 +358,7 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<td> CKL $11.4, $TP 6.4.3, $TP 6.4.5 </td></tr>
 	
 	<tr> <td> Droplet combustion theory  </td>
-	<td> </td></tr>
+	<td> DBS $3, $4, $5, $6, $7 </td></tr>
 </table><br>
 <!-- </div><br> -->
 
