adding mid term solutions

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -117,7 +117,7 @@ p
 	<ul> <li> Mid-semester exam: 30% <br>
 		<p style="padding-left: 50px;"><font color="lightgreen">Date: March 5th (Tuesday), Time: 6 PM--8 PM, Venue: TDCE seminar hall</font></p>
 		<p style="padding-left: 50px;"><font color="lightgreen">Cheat sheet: One A4 size sheet (written on both sides) is permitted</font></p></li>
-		<p style="padding-left: 50px;"><a href="https://owncloud.iitm.ac.in/public.php?service=files&t=vULgSopA7Oj6180">Exam</a></p>
+		<p style="padding-left: 50px;"><a href="https://owncloud.iitm.ac.in/public.php?service=files&t=vULgSopA7Oj6180">Exam</a>, <a hre="https://owncloud.iitm.ac.in/public.php?service=files&t=kZEjhLrvJLTSwT6">Solutions</a></p>
 		 <li> Final exam: 45%</li>
 		 <li> Demonstration reports: 20%. Groups of 2 or 3.</li>
 		 <li> Lecture notes: 5% <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=M7omgwNiUEnrgG3" target="_blank">February/March Schedule</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=8YtY5rA5G4JVuxz" target="_blank">LaTeX Template</a></li>
