--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -325,8 +325,9 @@ Upcoming tutorial session: Premixed flames -- February 14th
 </div><br>
 <br>
 
-<h3>Module 2: Non-premixed flames, with counterflow diffusion flame as an example: <a href="https://owncloud.iitm.ac.in/index.php/s/uDStSgYMsRWRGzo" target="_blank">Tutorial</a></h3>
-<!-- <div class="content"> -->
+<button class="collapsible">
+	<h3>Module 2: Non-premixed flames, with counterflow diffusion flame as an example: <a href="https://owncloud.iitm.ac.in/index.php/s/uDStSgYMsRWRGzo" target="_blank">Tutorial</a></h3></button>
+<div class="content">
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">	
@@ -360,10 +361,11 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<tr> <td> Droplet combustion theory  </td>
 	<td> DBS $3, $4, $5, $6, $7 </td></tr>
 </table><br>
-<!-- </div><br> -->
+</div><br>
 
-<button class="collapsible"><h5>Module 3: Burners for gaseous fuels</h5></button>
-<div class="content">
+<!-- <button class="collapsible"> -->
+<h5>Module 3: Burners for gaseous fuels</h5><!-- </button> -->
+<!--<div class="content">-->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">	
@@ -378,7 +380,7 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<td> </td></tr>
 	
 </table><br>
-</div><br>
+<!-- </div><br>-->
 
 <button class="collapsible"><h5>Module 4: Spray combustion and applications</h5></button>
 <div class="content">
