--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -101,6 +101,7 @@ p
 <tr> <td width="100%"><h3> Suggested Textbooks: </h3>
 <ul> 
     <li> Combustion Technology: Essentials of Flames and Burners, by V. Raghavan, Ane/Athena Books, 2016 (VR) </li>
+    <li> Applications of combustion principles to domestic gas burner design, by H. R. N Jones, 1990 (HJ) </li>
     <li> An introduction to fire dynamics, Douglas Drysdale, 2011 (DD) </li>
 	<li> Combustion and Mass transfer by D. B. Spalding, 1979 (DBS) </li>
     <li> Combustion Theory by F. A. Williams, ABP, 1985 (FAW) </li>
@@ -371,7 +372,7 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<col width = "35%">	
    <tr> 
 	<td> Domestic LPG stove burner - design concepts </td>
-	<td> </td> </tr>
+	<td> VR $3.1.3, $3.1.4, VR $4.4--$4.6, HJ $3.1--$3.4 </td> </tr>
 	
 	<tr> <td> MILD combustion - Theory of extinction of well-stirred reactors  </td>
 	<td>  </td></tr>
