--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -261,13 +261,13 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<col width = "65%">
 	<col width = "35%">				
 	<tr> <td> <font color="greenyellow">Gaseous fuel burners: LPG stove burner, MILD combustor</font></td>
-	<td> March 21st</td></tr>
-
-	<tr> <td> <font color="khaki">Gaseous fuel burners</font></td>
 	<td> March 28th</td></tr>
 
-	<tr> <td> <font color="greenyellow">Spray combustion: TBD</font></td>
+	<tr> <td> <font color="khaki">Gaseous fuel burners</font></td>
 	<td> April 4th</td></tr>
+
+	<tr> <td> <font color="greenyellow">Spray combustion: TBD</font></td>
+	<td> TBD</td></tr>
 
 	<tr> <td> <font color="khaki">Spray combustion</font></td>
 	<td> April 11th</td></tr>
