adding VR swirl burner ref.

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -375,7 +375,7 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<td> VR $3.1.3, $3.1.4, VR $4.4--$4.6, HJ $3.1--$3.4 </td> </tr>
 	
 	<tr> <td> MILD combustion - Theory of extinction of well-stirred reactors  </td>
-	<td> <a href="https://www.sciencedirect.com/science/article/pii/S1540748902801432" target="_blank">MILD combustion burner</a></td></tr>
+	<td> <a href="https://www.sciencedirect.com/science/article/pii/S1540748902801432" target="_blank">MILD combustion burner</a>, VR $4.3</td></tr>
 	<tr> <td> Stationary gas turbines - Blow off criteria, design criteria </td>
 	<td> </td></tr>
 	
