--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -363,7 +363,7 @@ Upcoming tutorial session: Premixed flames -- February 14th
 <br>
 
 <!-- <button class="collapsible"> -->
-<h3>Module 3: Burners for gaseous fuels</h3><!-- </button> -->
+<h3>Module 3: Burners for gaseous fuels: <a href="https://owncloud.iitm.ac.in/index.php/s/iI8L4yd0CGPpYeF" target="_blank"> Tutorial </a> </h3><!-- </button> -->
 <!--<div class="content">-->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
