--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -362,8 +362,9 @@ Upcoming tutorial session: Premixed flames -- February 14th
 </div><br>
 <br>
 
-<!-- <button class="collapsible"> -->
-<h3>Module 3: Burners for gaseous fuels: <a href="https://owncloud.iitm.ac.in/index.php/s/iI8L4yd0CGPpYeF" target="_blank"> Tutorial </a> </h3><!-- </button> -->
+<!-- <button class="collapsible"> --> 
+<!-- https://owncloud.iitm.ac.in/index.php/s/iI8L4yd0CGPpYeF -->
+<h3>Module 3: Burners for gaseous fuels: <a href="" target="_blank"> Tutorial </a> </h3><!-- </button> -->
 <!--<div class="content">-->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
