adding LPC ref.

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -375,8 +375,8 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	
 	<tr> <td> MILD combustion - Theory of extinction of well-stirred reactors  </td>
 	<td> <a href="https://www.sciencedirect.com/science/article/pii/S1540748902801432" target="_blank">MILD combustion burner</a>, VR $4.3</td></tr>
-	<tr> <td> Stationary gas turbines - Blow off criteria, design criteria </td>
-	<td> </td></tr>
+	<tr> <td> Stationary gas turbines </td>
+	<td> <a href="https://oaktrust.library.tamu.edu/handle/1969.1/163372" target="_blank">Lean premixed combustion</td></tr>
 	
 </table><br>
 <!-- </div><br>-->
