--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -362,10 +362,11 @@ Upcoming tutorial session: Premixed flames -- February 14th
 </div><br>
 <br>
 
-<!-- <button class="collapsible"> --> 
+<button class="collapsible">
 <!-- https://owncloud.iitm.ac.in/index.php/s/iI8L4yd0CGPpYeF -->
-<h3>Module 3: Burners for gaseous fuels: <a href="" target="_blank"> Tutorial </a> </h3><!-- </button> -->
-<!--<div class="content">-->
+<h5>Module 3: Burners for gaseous fuels: <a href="" target="_blank"> Tutorial </a> </h5>
+</button>
+<div class="content">
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">	
@@ -379,10 +380,12 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<td> <a href="https://oaktrust.library.tamu.edu/handle/1969.1/163372" target="_blank">Lean premixed combustion</td></tr>
 	
 </table><br>
-<!-- </div><br>-->
+</div><br>
 
-<button class="collapsible"><h5>Module 4: Spray combustion and applications</h5></button>
-<div class="content">
+<!-- <button class="collapsible"> -->
+<h3>Module 4: Spray combustion and applications</h3>
+<!-- </button> -->
+<!-- <div class="content"> -->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">	
@@ -400,7 +403,7 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<td> </td></tr>
 	
 </table><br>
-</div><br>
+<!-- </div><br> -->
 
 <!--<h3> Module 5: Solid fuel combustion</h3> -->
 <button class="collapsible"><h5>Module 5: Solid fuel combustion</h5></button>
