--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -360,11 +360,10 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<td> DBS $3, $4, $5, $6, $7 </td></tr>
 </table><br>
 </div><br>
-<br>
 
 <button class="collapsible">
 <!-- https://owncloud.iitm.ac.in/index.php/s/iI8L4yd0CGPpYeF -->
-<h5>Module 3: Burners for gaseous fuels: <a href="" target="_blank"> Tutorial </a> </h5>
+<h5>Module 3: Burners for gaseous fuels: <!-- <a href="" target="_blank"> Tutorial </a> --> </h5>
 </button>
 <div class="content">
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
@@ -381,6 +380,7 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	
 </table><br>
 </div><br>
+<br>
 
 <!-- <button class="collapsible"> -->
 <h3>Module 4: Spray combustion and applications</h3>
