--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -186,11 +186,12 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3>
 <ul>
-	<li> 15/3: Tutorial on non-premixed flames is updated </li> 
+	<li> 5/4: Tutorial on gaseous fuel combustion is added </li> 
 </ul>
 	<button class="collapsible"><h4>View older announcements</h4></button>
 	<div class="content">
 	<ul>
+	<li> 15/3: Tutorial on non-premixed flames is updated </li> 
 	<li> 6/3: Solutions for Demo 2 are due on 7/3 before 5 PM. Turn it in to the TAs.
     <li> 28/2: Tutorial on non-premixed flames is updated </li>
 	<!--<li> 20/2: Demo on non-premixed flames is scheduled for Thursday (21/2) at 12 PM. Assemble at the TDCE seminar hall sharp at 12 PM. </li>	-->
@@ -254,10 +255,10 @@ Upcoming tutorial session: Premixed flames -- February 14th
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">		
-	<tr> <td> <font color="greenyellow">Gaseous fuel burners: LPG stove burner, MILD combustor</font></td>
+	<tr> <td> <font color="greenyellow">Gaseous fuel burners: LPG stove burner, MILD combustor, <a href="https://owncloud.iitm.ac.in/index.php/s/lxA4YcDR2PcucpM">Questionairre</a>. Due by April 11th</font></td>
 	<td> March 28th</td></tr>
 	<tr> <td> <font color="khaki">Gaseous fuel burners</font></td>
-	<td> April 4th</td></tr>
+	<td> April 5th</td></tr>
 </table>
 <button class="collapsible"><h4>View more events</h4></button>
 <div class="content">
