--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -186,7 +186,7 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3>
 <ul>
-	<li> 5/4: Tutorial on gaseous fuel combustion is added </li> 
+	<li> 5/4: Tutorial on gaseous fuel combustion, questionairre for Demo 3 are added </li> 
 </ul>
 	<button class="collapsible"><h4>View older announcements</h4></button>
 	<div class="content">
