--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -186,7 +186,7 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3>
 <ul>
-	<li> 5/4: Tutorial on gaseous fuel combustion, questionairre for Demo 3 are added </li> 
+	<li> 5/4: Tutorial on gaseous fuel combustion, questionnaire for Demo 3 are added </li> 
 </ul>
 	<button class="collapsible"><h4>View older announcements</h4></button>
 	<div class="content">
@@ -255,7 +255,7 @@ Upcoming tutorial session: Premixed flames -- February 14th
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">		
-	<tr> <td> <font color="greenyellow">Gaseous fuel burners: LPG stove burner, MILD combustor, <a href="https://owncloud.iitm.ac.in/index.php/s/lxA4YcDR2PcucpM">Questionairre</a>. Due by April 11th</font></td>
+	<tr> <td> <font color="greenyellow">Gaseous fuel burners: LPG stove burner, MILD combustor, <a href="https://owncloud.iitm.ac.in/index.php/s/lxA4YcDR2PcucpM">Questionnaire</a>. Due by April 11th</font></td>
 	<td> March 28th</td></tr>
 	<tr> <td> <font color="khaki">Gaseous fuel burners</font></td>
 	<td> April 5th</td></tr>
