varun topics commit

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -109,6 +109,7 @@ p
     <li> Combustion Physics by C. K. Law (CKL) </li>
 	<li> Theoretical and Numerical Combustion by Thierry Poinsot and Denis Veynante, 2016 (TP)</li>
 	<li> <a href="https://www.itv.rwth-aachen.de/fileadmin/Downloads/Summerschools/SummerSchool.pdf" target="_blank">Ercoftac Summer school, Norbert Perters, 1992 (NP)</a></li>
+	<li> Combustion of liquid sprays, Alan Williams, 1989 (AW)</li>
 </ul>
 </tr>
 </table>
@@ -186,7 +187,8 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3>
 <ul>
-	<li> 5/4: Tutorial on gaseous fuel combustion, questionnaire for Demo 3 are added </li> 
+	<li> 11/4: Demo/Tutorial session on 12/4 at lecture hour. 
+	<li> 5/4: Tutorial on gaseous fuel combustion, questionnaire for Demo 3 are added</li> 
 </ul>
 	<button class="collapsible"><h4>View older announcements</h4></button>
 	<div class="content">
@@ -250,27 +252,23 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<td> February 28th</td></tr>
 	<tr> <td> <font color="khaki">Droplet combustion</font></td>
 	<td> March 14th</td></tr>
-</table>
-</div>
-<table border="1" cellspacing="2" cellpadding="2" width="100%">
-	<col width = "65%">
-	<col width = "35%">		
 	<tr> <td> <font color="greenyellow">Gaseous fuel burners: LPG stove burner, MILD combustor, <a href="https://owncloud.iitm.ac.in/index.php/s/lxA4YcDR2PcucpM">Questionnaire</a>. Due by April 11th</font></td>
 	<td> March 28th</td></tr>
 	<tr> <td> <font color="khaki">Gaseous fuel burners</font></td>
 	<td> April 5th</td></tr>
 </table>
+</div>
+<table border="1" cellspacing="2" cellpadding="2" width="100%">
+	<col width = "65%">
+	<col width = "35%">		
+	<tr> <td> <font color="greenyellow">Spray combustion: tutorial/demo</font></td>
+	<td> April 12th</td></tr>
+</table>
 <button class="collapsible"><h4>View more events</h4></button>
 <div class="content">
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
-	<col width = "35%">		
-	<tr> <td> <font color="greenyellow">Spray combustion: TBD</font></td>
-	<td> TBD</td></tr>
-
-	<tr> <td> <font color="khaki">Spray combustion</font></td>
-	<td> April 11th</td></tr>
-	
+	<col width = "35%">	
 	<tr> <td> <font color="greenyellow">Solid fuel combustion: Coal gasifier, MILD inspired burner for biomass</font></td>
 	<td> April 18th</td></tr>
 
@@ -391,15 +389,12 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<col width = "35%">	
    <tr> 
 	<td> Basics of atomization and types of injectors</td>
-	<td> </td> </tr>
+	<td> <a href="https://owncloud.iitm.ac.in/index.php/s/eK1OZZGF84JNuaU">Energy budget in atomization</a>, <br><a href="https://owncloud.iitm.ac.in/index.php/s/DGF0NrOM4Kbh2AG">Atomization processes (AW $3)</a> </td> </tr>
 	
-	<tr> <td> Spray combustion: (i) Modifications to flamelet model to include droplets </td>
+	<tr> <td> Spray combustion: (i) Application in gas turbines and LP rockets  </td>
 	<td> </td></tr>
 
-	<tr> <td> Spray combustion: (ii) Aerodynamics and stability of spray flames  </td>
-	<td> </td></tr>
-
-	<tr> <td> Spray combustion: (iii) Application in gas turbines and LP rockets  </td>
+	<tr> <td> Spray combustion: (ii) Application in furnaces and boilers </td>
 	<td> </td></tr>
 	
 </table><br>
